fixed css spacing for spotlights, adjusted html to validate with w3

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -157,7 +157,7 @@ header {
 }
 
 .spotlight {
-    height: 280px;
+    height: auto;
     border: 1px solid black;
     background-color: #aaa;
     padding: 10px;
@@ -177,10 +177,10 @@ body > main > section.spotlight > a:nth-child(2) {
 .spot1,
 .spot2,
 .spot3 {
-    height: 100px;
-    border: 1px solid black;
+    height: auto;
     padding: 10px;
     margin-top: 10px;
+    box-shadow: 3px 3px 4px #2f2f2f;
 }
 
 .pictures {
@@ -243,10 +243,21 @@ p {
     display: inline-block;
     padding: .2rem;
 }
-
-.spot3 {
-    display: none;
-}
+.spot1 {
+    /* height: auto; */
+    grid-area: 3;
+    grid-column: 1/4;
+  }
+  .spot2 {
+    /* height: auto; */
+    grid-area: 6;
+    grid-column: 1/4;
+  }
+  .spot3 {
+    /* height: auto; */
+    grid-area: 7;
+    grid-column: 1/4;
+  }
 
 /* JOIN PAGE */
 
